--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-gantt",
-  "version": "2.0.0-rc.1",
+  "version": "2.0.0-rc.1-fixed",
   "description": "Gantt chart component for AngularJS",
   "author": "Rémi Alvergnat <toilal.dev@gmail.com> (https://www.pragmasphere.com)",
   "contributors": [
